--- a/_sass/_pages/_page__post.scss
+++ b/_sass/_pages/_page__post.scss
@@ -6,6 +6,7 @@
 
 .page-post {
   .post__header {
+    padding-top: 0;
     padding-bottom: 48px;
   }
 
@@ -19,8 +20,9 @@
 
   .post__featured-image {
     width: 100%;
-    max-width: 1440px;
     margin: auto;
+    max-height: 500px;
+    object-fit: cover;
   }
 
   .post__content.highlight-first p:first-child {
@@ -29,8 +31,11 @@
   }
 
   .post__content {
-    max-width: 656px;
     margin-bottom: 80px;
+
+    .post__top-padding {
+      height: 32px;
+    }
 
     p {
       margin-bottom: 16px;
@@ -52,6 +57,11 @@
       margin: 40px 0;
     }
 
+    h1 {
+      margin-top: 64px;
+      margin-bottom: 24px;
+    }
+
     h2 {
       margin: 80px 0 16px;
     }
@@ -59,6 +69,11 @@
     h3,
     h4 {
       margin: 56px 0 16px;
+    }
+
+    h5 {
+      margin-top: 32px;
+      margin-bottom: 16px;
     }
 
     table:not(.rouge-table) {
@@ -113,6 +128,7 @@
       font-size: $p-size-small;
       line-height: $p-lineheight;
       overflow: auto;
+      margin-bottom: 16px;
 
       @include mq(tabletp) {
         font-size: $p-size;
@@ -180,15 +196,15 @@
 
   @include mq(tabletp) {
     .post__header {
-      padding-bottom: 80px;
+      padding-bottom: 0;
     }
 
     .post__title {
-      margin-bottom: 32px;
+      margin-bottom: 16px;
     }
 
     .post__date {
-      margin-bottom: 80px;
+      margin-bottom: 32px;
     }
 
     .post__content {
