--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,9 +37,14 @@
 	<meta property="og:description" content="{{ page.description }}" />
 	<meta property="og:image" content="{{ site.url }}{{ page.featured_image }}" />
 
-	{% if site.data.settings.font_settings.font_embed %}
+	{% if site.data.settings.font_settings.font_embed_header %}
 	<!-- Font Embed Code -->
-	{{ site.data.settings.font_settings.font_embed }}
+	{{ site.data.settings.font_settings.font_embed_header }}
+	{% endif %}
+
+	{% if site.data.settings.font_settings.font_embed_body %}
+	<!-- Font Embed Code -->
+	{{ site.data.settings.font_settings.font_embed_body }}
 	{% endif %}
 
 	<!-- Styles -->
@@ -108,9 +113,9 @@
 	<div class="page">
 		<div class="page__content"
 			data-page-title="{% if page.url == "/" %}{{ site.data.settings.basic_settings.site_title }} – {{ page.title }}{% else %}{{ page.title }} – {{ site.data.settings.basic_settings.site_title }}{% endif %}">
-			
+
 			{% include component__contact.html %}
-			
+
 			{{ content }}
 
 		</div>
