Fix font for code

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,6 +47,11 @@
 	{{ site.data.settings.font_settings.font_embed_body }}
 	{% endif %}
 
+	{% if site.data.settings.font_settings.font_embed_code %}
+	<!-- Font Embed Code -->
+	{{ site.data.settings.font_settings.font_embed_code }}
+	{% endif %}
+
 	<!-- Styles -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="/css/style.css">
