--- a/_sass/_pages/_page__post.scss
+++ b/_sass/_pages/_page__post.scss
@@ -37,6 +37,14 @@
       height: 32px;
     }
 
+    pre {
+      padding: 8px;
+    }
+
+    code {
+      font-family: 'Source Code Pro', monospace;
+    }
+
     p {
       margin-bottom: 16px;
     }
