--- a/_includes/section__about.html
+++ b/_includes/section__about.html
@@ -5,22 +5,22 @@
   <div class="wrap grid">
 
     <div class="about__image">
-      <img src="/images/profile.jpg" alt="">
+      <img src="/images/profile.png" alt="Picture of me">
 
       {% include component-socials.html %}
     </div>
 
     <div class="about__content">
-      <h2 class="title">Hey, I’m Jonathan, nice to meet you!</h2>
-      <p class="subtitle subtitle--light">I’m a designer and a developer with over 12 years of experience under my belt.
+      <h2 class="title">Scott Robbins</h2>
+      <p class="subtitle subtitle--light">
+        iOS and Rails developer in the CLE
       </p>
-
-      <p>My skills include product design, interactive design, aesthetic art direction, prototyping, mobile design,
-        branding, front-end development and team leadership. I’m interested in clean aesthetics, minimalism, unusual
-        typography, photography and simplistic UX solutions.</p>
-      <p>I’d love to learn about your company and see how I can help, feel free to send me an email!</p>
-
-      <a href="#" class="cta button--fill contact-trigger js-contact">Get in Touch</a>
+      <p>
+        Just want to share some of my thoughts and experiences on software development as I go.
+      </p>
+      <p>
+        Hope you'll reach out to continue the discussion on these topics.
+      </p>
     </div>
   </div>
 </section>
