Use built in code formatting

--- a/_sass/_pages/_page__post.scss
+++ b/_sass/_pages/_page__post.scss
@@ -37,11 +37,7 @@
       height: 32px;
     }
 
-    pre {
-      padding: 8px;
-    }
-
-    code {
+    code pre {
       font-family: 'Source Code Pro', monospace;
     }
 
