--- a/_sass/_pages/_page__post.scss
+++ b/_sass/_pages/_page__post.scss
@@ -4,6 +4,11 @@
 
 // - - - - - - - - - - - - - - - - - -
 
+.not_found__img {
+  max-height: 500px;
+  max-width: 100%;
+}
+
 .page-post {
   .post__header {
     padding-top: 0;
