--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,9 +25,11 @@
 					</li>
 					{% endfor %}
 
+					{% if site.data.settings.contact_settings.enabled %}
 					<li class="menu__cta">
 						<a href="#" class="menu__cta__link button--text contact-trigger js-contact">Get In Touch</a>
 					</li>
+					{% endif %}
 				</ul>
 			</div>
 		</nav>
