--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,7 @@ layout: default
 
 		<div class="wrap">
 			<h1 class="post__title">{{ page.title }}</h1>
+			<h2 class="post__subtitle subtitle--light">{{ page.subtitle }}</h2>
 			<time class="post__date label">{{ page.date | date_to_long_string }}</time>
 		</div>
 
