--- a/_sass/_pages/_page__post.scss
+++ b/_sass/_pages/_page__post.scss
@@ -19,6 +19,10 @@
     margin-bottom: 16px;
   }
 
+  .post__subtitle {
+    margin-bottom: 6px;
+  }
+
   .post__date {
     margin-bottom: 48px;
   }
