--- a/_sass/_pages/_page__post.scss
+++ b/_sass/_pages/_page__post.scss
@@ -47,7 +47,7 @@
     }
 
     code pre {
-      font-family: 'Source Code Pro', monospace;
+      font-family: $code-font;
     }
 
     p {
@@ -149,6 +149,12 @@
 
     .highlighter-rouge {
       margin: 32px 0;
+      font-family: $code-font;
+      background-color: $code-background-color;
+      color: $code-default-text-color;
+      padding-left: 4px;
+      padding-right: 4px;
+      padding-bottom: 2px;
     }
 
     hr {
