Make all headers into anchor tags

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -17,7 +17,7 @@ layout: default
 		<div class="wrap">
 
 			<article class="post__content {% if page.highlight_first %}highlight-first{% endif %}">
-				{{ page.content }}
+				{% include anchor_headings.html html=page.content %}
 			</article>
 
 		</div>
