--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -179,6 +179,19 @@ blockquote {
   }
 }
 
+a h1,
+a h2,
+a h3,
+a h4,
+a h5,
+a h6 {
+  @include transition(all 120ms ease-in-out);
+
+  &:hover {
+    color: $accent-color;
+  }
+}
+
 a {
   text-decoration: none;
   color: $text-dark-color;
