--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,27 +15,30 @@
 	- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
 
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
 	<!-- Page Info -->
-	<link rel="shortcut icon" href="{{ site.data.settings.basic_settings.favicon_image }}">
+	<link rel="shortcut icon" href="{{ site.data.settings.basic_settings.favicon_image }}" />
 	<title>{% if page.url == "/" %}{{ site.data.settings.basic_settings.site_title }} –
 		{{ page.title }}{% else %}{{ page.title }} – {{ site.data.settings.basic_settings.site_title }}{% endif %}</title>
-	<meta name="description" content="{{ page.description }}">
+	<meta name="description" content="{{ page.subtitle }}" />
 
 	<!-- Twitter Card -->
-	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:title"
-		content="{% if page.url == "/" %}{{ site.data.settings.basic_settings.site_title }} – {{ page.title }}{% else %}{{ page.title }} – {{ site.data.settings.basic_settings.site_title }}{% endif %}">
-	<meta name="twitter:description" content="{{ page.description }}">
-	<meta name="twitter:image:src" content="{{ site.url }}{{ page.featured_image }}">
+		content="{% if page.url == "/" %}{{ site.data.settings.basic_settings.site_title }} – {{ page.title }}{% else %}{{ page.title }}{% endif %}" />
+	<meta name="twitter:description" content="{{ page.subtitle }}" />
+	<meta name="twitter:image:src" content="{{ site.url }}{{ page.featured_image }}" />
+	<meta name="twitter:creator" content="{{ site.data.settings.social_settings.twitter_tag }}" />
+	<meta name="twitter:site" content="{{ site.data.settings.social_settings.twitter_tag }}" /> 
 
 	<!-- Facebook OpenGraph -->
 	<meta property="og:title"
-		content="{% if page.url == "/" %}{{ site.data.settings.basic_settings.site_title }} – {{ page.title }}{% else %}{{ page.title }} – {{ site.data.settings.basic_settings.site_title }}{% endif %}" />
-	<meta property="og:description" content="{{ page.description }}" />
+		content="{% if page.url == "/" %}{{ site.data.settings.basic_settings.site_title }} – {{ page.title }}{% else %}{{ page.title }}{% endif %}" />
+	<meta property="og:description" content="{{ page.subtitle }}" />
 	<meta property="og:image" content="{{ site.url }}{{ page.featured_image }}" />
+	<meta property="og:site_name" content="{{ site.data.settings.basic_settings.site_title }}" />
 
 	{% if site.data.settings.font_settings.font_embed_header %}
 	<!-- Font Embed Code -->
