--- a/_includes/component-socials.html
+++ b/_includes/component-socials.html
@@ -1,5 +1,5 @@
 <ul class="socials">
-	{% for url in site.data.settings.social_settings %}
+	{% for url in site.data.settings.social_settings.social_urls %}
 	{% if url[1] != '' %}
 	<li class="socials__item">
 		<a href="{{ url[1] }}" target="_blank" class="socials__item__link"
