Update Profile Information

--- a/_includes/section__about.html
+++ b/_includes/section__about.html
@@ -13,7 +13,7 @@
     <div class="about__content">
       <h2 class="title">Scott Robbins</h2>
       <p class="subtitle subtitle--light">
-        iOS and Rails developer in the CLE
+        Software Engineer in Toledo
       </p>
       <p>
         Just want to share some of my thoughts and experiences on software development as I go.
